realtime-search - difficulty : fairly easy - notion used : Observable, distinctUntilChanged, filter, from, fromEvent, map, scan, switchMap, pipe, subscribe

--- a/realtime-search/index.html
+++ b/realtime-search/index.html
@@ -13,8 +13,7 @@
           <input type="search" 
           id="searchbar" 
           name="searchbar" 
-          placeholder="which carpet are you looking for ?" 
-          autocomplete 
+          placeholder="Which carpet are you looking for ?" 
           autocorrect="on"
           minlength="1"
           ></div>
