pushing some stuff I forgot

--- a/realtime-search/index.html
+++ b/realtime-search/index.html
@@ -10,15 +10,16 @@
     <div id="app">
       <div class="container">
         <div class="wrapper">
-          <input type="search" 
-          id="searchbar" 
-          name="searchbar" 
-          placeholder="Which carpet are you looking for ?" 
-          autocorrect="on"
-          minlength="1"
-          ></div>
-        <div class="wrapper" id="product-wrapper">
+          <input
+            type="search"
+            id="searchbar"
+            name="searchbar"
+            placeholder="Which carpet are you looking for ?"
+            autocorrect="on"
+            minlength="1"
+          />
         </div>
+        <div class="wrapper" id="product-wrapper"></div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
