--- a/start-stop-reset/index.html
+++ b/start-stop-reset/index.html
@@ -15,9 +15,7 @@
         </div>
         <p id="count">0</p>
         <div class="button-container">
-          <button class="control-button" id="start-button">
-            Start
-          </button>
+          <button class="control-button" id="start-button">Start</button>
           <button class="control-button" id="stop-button">Stop</button>
           <button class="control-button" id="reset-button">Reset</button>
         </div>
